===============
Stalker Changes
===============

0.1.2.a5
--------

* :class:`~stalker.core.models.SimpleEntity`.\ 
  :attr:`~stalker.core.models.SimpleEntity.name` attribute doesn't accept
  anything other than a string or unicode anymore.

* All the error messages are now showing both the class and attribute names,
  and for TypeErrors it also shows the current given data type which raised
  the error and the desired type.

0.1.2.a4
---------

* Added database tests for:
  
  * :class:`~stalker.core.models.Review`
  * :class:`~stalker.core.models.Task`
  * :class:`~stalker.core.models.Version`
  
* The ``published`` attribute in :class:`~stalker.core.models.Version` is 
  renamed to :attr:`~stalker.core.models.Version.is_published`.
  
* :class:`~stalker.core.models.Structure` is not ``strictly_typed`` anymore.
  
* The initialization of ``status_list`` attribute in classes which are mixed
  with :class:`~stalker.core.models.StatusMixin` is now automatically done if
  there is a database connection (stalker.db.session is not None) and there is
  a suitable :class:`~stalker.core.models.StatusList` instance in the database
  whom :attr:`~stalker.core.models.StatusList.target_entity_type` attribute is
  set to the mixed-in class name.

* Finished the tests for :class:`~stalker.core.models.Booking` class.

* The :class:`~stalker.core.models.Booking` class now checks if there is more
  than one booking is creating with overlapping time interval and issue a
  :class:`~stalker.core.errors.OverBookedWarning`.

* Cleaned up the code style.

* Moved the ``target_entity_type`` functionality to a new mixin class called
  :class:`~stalker.core.models.TargetEntityTypeMixin`\ .
  :class:`~stalker.core.models.StatusList`,
  :class:`~stalker.core.models.FilenameTemplate`, and
  :class:`~stalker.core.models.Type` classes are mixin with this new class.

* Included the ``pyseq`` library to the dependency list.

0.1.2.a3
---------

* stalker.__version__ is fixed for PyPI

0.1.2.a2