@@ -10,5 +10,5 @@ and vfx studios. See docs for more information.
 
 
 
-__version__ = "0.1.2.a4"
+__version__ = "0.1.2.a5"
 
